Add data for melee weapons and sentinels

--- a/template.html
+++ b/template.html
@@ -12,6 +12,7 @@
 
     <div class="row">
       <div class="col-md-9">
+
         <h3>Primary</h3>
         <div class="row">
           {% for item_name in item_names_primary %}
@@ -33,6 +34,29 @@
           </div>
           {% endfor %}
         </div>
+
+        <h3>Melee</h3>
+        <div class="row">
+          {% for item_name in item_names_melee %}
+          <div class="btn-group-toggle col-md-4 mb-1" data-toggle="buttons">
+            <label class="btn btn-secondary btn-block active" onclick="toggleItem('{{ item_name }}')">
+              <input type="checkbox" checked autocomplete="off">{{ item_name }}
+            </label>
+          </div>
+          {% endfor %}
+        </div>
+
+        <h3>Sentinels</h3>
+        <div class="row">
+          {% for item_name in item_names_sentinels %}
+          <div class="btn-group-toggle col-md-4 mb-1" data-toggle="buttons">
+            <label class="btn btn-secondary btn-block active" onclick="toggleItem('{{ item_name }}')">
+              <input type="checkbox" checked autocomplete="off">{{ item_name }}
+            </label>
+          </div>
+          {% endfor %}
+        </div>
+
       </div>
 
       <div class="col-md-3">
