--- a/template.html
+++ b/template.html
@@ -17,6 +17,8 @@
     </div>
     <hr>
     
+    <button class="btn btn-info" onclick="selectAllItems()">Select All</button>
+    <button class="btn btn-info" onclick="deselectAllItems()">Deselect All</button>
 
     <div class="row">
       <div class="col-md-9">
@@ -36,13 +38,15 @@
 
             <div class="row">
               {% for item_name in category.item_info %}
-              <div class="btn-group-toggle col-md-3 mt-1" data-toggle="buttons">
-                <label class="btn btn-secondary btn-block active" id="{{ item_name[2] }}" onclick="toggleItem('{{ item_name[0] }}')">
+
+              <div class="col-md-3 mt-1">
+                <button type="button" class="btn btn-secondary btn-block active" data-toggle="button" id="{{ item_name[2] }}" autocomplete="off" onclick="toggleItem('{{ item_name[0] }}')">
                   <img src="img/{{ item_name[1] }}" alt="" width="100%">
                   <br>
-                  <input type="checkbox" checked autocomplete="off">{{ item_name[0] }}
-                </label>
+                  {{ item_name[0] }}
+                </button>
               </div>
+              
               {% endfor %}
             </div>
 
