--- a/webpage/warframe_costs.html
+++ b/webpage/warframe_costs.html
@@ -15,6 +15,8 @@
     <div class="text-center mt-2">
       <h4>Warframe Component Cost Calculator</h4>
     </div>
+    <p class="alert alert-warning">This page uses cookies to store which items you have selected, and nothing else.</p>
+    <p class="alert alert-info">This calculator lists the required components to build the selected items. Only items which are built in the foundry are listed, so things like weapons purchased from Baro are not listed here. Please note that parts such as a Warframe's chassis / systems / neuroptics are not listed individually, instead the cost of each of these sub-components is included in the parent item's costs. This also applies to weapons which use another weapon in their recipe. This tool is intended to be used by scrolling through your codex and selecting items which have not yet been mastered (and are not currently being built in your foundry).</p>
     <hr>
     
     <button class="btn btn-info" onclick="selectAllItems()">Select All</button>
