Reorganise item categories
Restructure Archwing section to match codex; arch-guns in Primary, arch-melee in Melee, Archwings in Warframes.
Reorder the tabs to put Warframes & Vehicles before Sentinels.
Remove Kuva weapons from lists.
Move sentinel weapons from Primary to Sentinel.

--- a/template.html
+++ b/template.html
@@ -14,13 +14,14 @@
 
     <div class="text-center mt-2">
       <h4>Warframe Component Cost Calculator</h4>
+      <h6><em>Tool version 1.0 for Warframe version 29.6 Orphix Venom</em></h6>
     </div>
-    <p class="alert alert-warning">This page uses cookies to store which items you have selected, and nothing else.</p>
-    <p class="alert alert-info">This calculator lists the required components to build the selected items. Only items which are built in the foundry are listed, so things like weapons purchased from Baro are not listed here. Please note that parts such as a Warframe's chassis / systems / neuroptics are not listed individually, instead the cost of each of these sub-components is included in the parent item's costs. This also applies to weapons which use another weapon in their recipe. This tool is intended to be used by scrolling through your codex and selecting items which have not yet been mastered (and are not currently being built in your foundry).</p>
+    <p class="alert alert-warning">This page uses cookies to store which items you have selected.</p>
+    <p class="alert alert-info">This calculator lists the required components to build the selected items. Only items which are built in the foundry are listed, so things like weapons purchased from Baro are not listed here. Please note that parts such as a Warframe's chassis / systems / neuroptics are not listed individually, instead the cost of each of these sub-components is included in the parent item's costs. This also applies to weapons which use another weapon in their recipe. This tool is intended to be used by scrolling through your codex (sort by rank) and selecting items which have not yet been mastered / made. Note that this is why arch-guns are listed under Primary, arch-melee under Melee, and archwings under Warframes; they are sorted like this in the codex.</p>
     <hr>
     
-    <button class="btn btn-info" onclick="selectAllItems()">Select All</button>
-    <button class="btn btn-info" onclick="deselectAllItems()">Deselect All</button>
+    <button class="btn btn-info mb-1" onclick="selectAllItems()">Select All</button>
+    <button class="btn btn-info mb-1" onclick="deselectAllItems()">Deselect All</button>
 
     <div class="row">
       <div class="col-md-9">
@@ -33,7 +34,7 @@
           {% endfor %}
         </ul>
 
-        <div class="tab-content">
+        <div class="tab-content mb-3">
 
           {% for category in category_data %}
           <div class="tab-pane fade show {% if loop.first %}active{% endif %}" id="{{ category.name }}" role="tabpanel">
