--- a/template.html
+++ b/template.html
@@ -6,6 +6,8 @@
   <title>Warframe Components Calculator</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/8301eb6e3c.js" crossorigin="anonymous"></script>
 </head>
@@ -18,15 +20,13 @@
 
   <div class="container-fluid ml-0">
 
-    <nav class="navbar navbar-dark mb-2">
-      <span class="navbar-brand mb-0 h1">Warframe Component Cost Calculator</span> <h6><em>Tool version 1.1 for Warframe version 29.6 Orphix Venom</em></h6>
-    </nav>
-
-    <!-- <div class="text-center mt-2">
-      <h4>Warframe Component Cost Calculator</h4>
-      <h6><em>Tool version 1.0 for Warframe version 29.6 Orphix Venom</em></h6>
+    <div class="top-bar px-3 py-1 mb-2">
+      <div class="d-flex align-items-center">
+        <div class="mr-auto mt-2"><h4 class="">Warframe Component Cost Calculator</h4></div>
+        <div class="p-2"><i class="fab fa-github mr-2"></i><a href="https://github.com/ausanc/warframe-component-calculator">This project is on GitHub</a></div>
+        <div class="p-2"><em>Tool version 1.2 for Warframe version 29.6 Orphix Venom</em></div>
+      </div>
     </div>
-    <hr> -->
 
     <!-- Main content of the page -->
     <div class="row" id="main-content">
